tests/NormalTests/paczka1/fuzzy1/37119386.err
Error in line 26: 891AMZxP3dd S935 64,6
Error in line 21: jNChq S622 45,3
